# 231-329_rumiantseva_architecture

./: .env  docker-compose.yaml
backend/: Dockerfile  lab1_db
backend/lab1/: settings.py
backend/mainapp/: models.py  views.py
backend/mainapp/migrations/: 0002_alter_book_author_alter_book_genre.py
lab1-2/: docker-compose.yaml
lab1-2/backend/: db.sqlite3
lab1-2/backend/lab1/: urls.py
lab1-2/backend/mainapp/: gentesdata.py  serializers.py
lab1-2/backend/mainapp/migrations/: 0001_initial.py
lab1-2/nginx/: Dockerfile
lab1-2/nginx/templates/: default.conf.template
lab1-2/requests/: request.http
lab3/BookParser/: CMakeLists.txt  book.cpp  book.h  inetworkadapter.h  main.cpp  mainwindow.cpp  mainwindow.h  networkmanager.cpp  networkmanager.h  networkmanageradapter.h
requests/: request.http
